# EDLPaper

./: .gitignore  3DP2Helper.py  P2Helper.py  README.md  main.py  pyproject.toml  simulate_landing.py
P3Files/: _init_  p3.py
P3Files/tests/: P3Pytest
src/cbfpdg/: cbf.py  clfs.py  landing_socp.py  one_step_socp.py
tests/: test_clfs.py  test_one_step_socp.py
