[project]
name = "cbfpdg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cvxpy>=1.8.2",
    "ecos>=2.0.14",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0.2",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cbfpdg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
